<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">login</string>
    <string name="create_login">Create Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. "</string>
    <string name="bt_instruction">Instruction</string>
    <string name="instruction">Instruction</string>
    <string name="bt_shoes_title">Shoes</string>
    <string name="shoe_name">Name: %s</string>
    <string name="shoe_size">Size: %f</string>
    <string name="shoe">Shoes</string>
    <string name="logout">Logout</string>
    <string name="label_name">Name:</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="label_description">Description</string>
    <string name="description">Description: %s</string>
    <string name="company_label">Company: %s</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="detail">Detail</string>
</resources>
